--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "nodemon": "^2.0.3",
+    "prettier": "^2.5.1"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.11.0"
   }
 }
